# ZATCA_Integration

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
zatca_integration/: clearence_util.py  common_util.py  compliance_util.py  decode.py  hooks.py  modules.txt  patches.txt  util.py
zatca_integration/customization/sales_invoice/: generate_pdf.py  generate_pdf_3a.py  generate_pdf_3a_convertapi.py  generate_pdf_image.py  sales_invoice.js  sales_invoice.py
zatca_integration/fixtures/: custom_field.json  custom_html_block.json  print_format.json  property_setter.json  sales_taxes_and_charges_template.json  workspace.json  zatca_csr_settings.json  zatca_environment.json  zatca_settings.json
zatca_integration/overrides/: address.py  customer.py  sales_invoice.py
zatca_integration/public/js/: customer_address.js  sales_invoice.js  sales_invoice_list.js
zatca_integration/saudi_arabia_electronic_invoicing/: background_task.py  phase_one_utils.py  sign_invoice.py  sign_invoice_util.py  utils.py
zatca_integration/saudi_arabia_electronic_invoicing/custom/: address.json  company.json  customer.json  purchase_invoice.json  purchase_taxes_and_charges_template.json  sales_invoice.json  sales_taxes_and_charges_template.json
zatca_integration/saudi_arabia_electronic_invoicing/data/: create_xml.py  test_data.py
zatca_integration/saudi_arabia_electronic_invoicing/doctype/compliance_csid/: compliance_csid.js  compliance_csid.json  (+2 more)
zatca_integration/saudi_arabia_electronic_invoicing/patches/: sales_invoice.py
zatca_integration/saudi_arabia_electronic_invoicing/signing_engine/: final_invoice_signing.py  generate_final_xml.py  generate_invoice_xml.py  generate_tax_data.py  initial_invoice_signing.py
zatca_integration/templates/invoice/: Standard_Invoice.xml
zatca_integration/test/: __init__.py  test_utils.py
zatca_integration/workspace_sidebar/: zatca_integration.json
(+95 files in other folders)
