[project]
name = "zatca_integration"
authors = [
    { name = "Shakir PM", email = "shakir@beverensoftware.com"}
]
description = "Saudi Arabia Electronic Invoicing Phase 2"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "qrcode~=7.4.2",
    "asn1~=2.7.0",
    "numpy==2.2.4",
    "pillow==10.2.0",
     "pikepdf",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
