[project]
name = "zatca_integration"
authors = [
    { name = "Shakir PM", email = "shakir@beverensoftware.com"},
    { name = "Josep Mania", email = "mania@beverensoftware.com"}
]
description = "Saudi Arabia Electronic Invoicing Phase 2"
requires-python = ">=3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "qrcode~=7.4.2",
    "asn1~=2.7.0",
    "numpy==2.2.4",
    "pillow>=10.3.0",
     "pikepdf",
     "reportlab",
     "python-bidi",
    "arabic-reshaper",
    "pymupdf",
    "convertapi",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E203",  # whitespace before ':' (black compatibility)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
